# sunghyun-sans

./: .gitignore  AUTHORS.txt  CONTRIBUTORS.txt  DESCRIPTION.en_us.html  LICENSE  README.md  flake.nix  pyproject.toml
scripts/: build-web-dist.py  fix-metadata.py
site/: package.json  pnpm-lock.yaml  proxy.ts
site/app/: globals.css  layout.tsx
site/app/[locale]/: layout.tsx  opengraph-image.tsx  page.tsx
site/components/: cta-section.tsx  faq-section.tsx  footer.tsx  hero-section.tsx  info-section.tsx  license-pricing-section.tsx  motion-provider.tsx  navigation.tsx  opentype-section.tsx  preview-section.tsx  section-header.tsx  section-wrapper.tsx  weight-showcase.tsx
site/components/glyph-labs/: glyph-labs-loading.tsx  glyph-labs-section.tsx  glyph-viewer.tsx
site/components/ui/: button.tsx  input.tsx  slider.tsx  switch.tsx
site/i18n/: navigation.ts  request.ts  routing.ts
site/lib/: animations.ts  constants.ts
site/messages/: en.json  jp.json  kr.json
site/types/: opentype.js.d.ts
source/SunghyunSans.glyphspackage/: fontinfo.plist
source/SunghyunSans.glyphspackage/glyphs/: lmidtilde.ss02.glyph  (+37 more)
source/SunghyunSansDisambiguated.glyphspackage/: fontinfo.plist
source/SunghyunSansJP.glyphspackage/: fontinfo.plist
source/SunghyunSansKR.glyphspackage/: fontinfo.plist
sources/: config.yaml
sources/SunghyunSans.glyphspackage/: fontinfo.plist
sources/SunghyunSansDisambiguated.glyphspackage/: fontinfo.plist
sources/SunghyunSansJP.glyphspackage/: UIState.plist  fontinfo.plist
sources/SunghyunSansKR.glyphspackage/: fontinfo.plist
(+109 files in other folders)
